--- a/config.env
+++ b/config.env
@@ -6,3 +6,16 @@ PASSWORD=Good.luck12
 JWT_SECRET=th0r-alm18ty-ar010m-de00om9-ult20n-d33d
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
+
+
+EMAIL_USERNAME=c914dfd11d204a
+EMAIL_PASSWORD=4a1c52d287d2b4
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT= 25
+
+
+EMAIL_FROM=ayman@ali.com
+
+
+SENDGRID_USERNAME=Artyom23
+SENDGRID_PASSWORD=Goodluck12
