--- a/config.env
+++ b/config.env
@@ -1,9 +1,8 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=3000
-DATABASE=mongodb+srv://Mawlan212:<PASSWORD>@cars-nz5sq.mongodb.net/ProjectCarsApp?retryWrites=true&w=majority
-PASSWORD=Good.luck12
-
-JWT_SECRET=th0r-alm18ty-ar010m-de00om9-ult20n-d33d
+DATABASE=wejfioew
+PASSWORD=eiorfjire
+JWT_SECRET=th0r-alm18ty-arty0m-fuckyou-ultr0n-d33d
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
 
@@ -14,8 +13,8 @@ EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT= 25
 
 
-EMAIL_FROM=ayman@ali.com
+EMAIL_FROM=ali@BrighterSirius.com
 
 
-SENDGRID_USERNAME=Artyom23
-SENDGRID_PASSWORD=Goodluck12
+SENDGRID_USERNAME=eorifj
+SENDGRID_PASSWORD=euirhfiuerh
