--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "MobileApp",
+  "name": "natours",
   "version": "1.0.0",
-  "description": "Cars",
+  "description": "learning node express ",
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
@@ -10,32 +10,28 @@
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
-  "author": "Ali",
+  "author": "artyom",
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "axios": "^0.18.1",
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "express-brute": "^1.0.1",
     "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^5.0.0",
     "form-data": "^2.5.1",
-    "helmet": "^3.21.2",
+    "helmet": "^3.20.0",
     "hpp": "^0.2.2",
     "html-to-text": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
-    "minimist": "^1.2.0",
-    "mongoose": "^5.9.7",
+    "mongoose": "^5.6.6",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.3.0",
     "pug": "^2.0.4",
-    "secure-env": "^1.2.0",
     "sharp": "^0.23.0",
     "slugify": "^1.3.4",
     "socket.io": "^2.3.0",
@@ -52,7 +48,7 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
-    "parcel-bundler": "^1.12.4",
+    "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2"
   },
   "engines": {
