--- a/config.env
+++ b/config.env
@@ -1,8 +1,9 @@
-NODE_ENV=production
+NODE_ENV=development
 PORT=3000
-DATABASE=wejfioew
-PASSWORD=eiorfjire
-JWT_SECRET=th0r-alm18ty-arty0m-fuckyou-ultr0n-d33d
+DATABASE=mongodb+srv://Mawlan212:<PASSWORD>@cars-nz5sq.mongodb.net/ProjectCarsApp?retryWrites=true&w=majority
+PASSWORD=Good.luck12
+
+JWT_SECRET=th0r-alm18ty-ar010m-de00om9-ult20n-d33d
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
 
@@ -13,8 +14,8 @@ EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT= 25
 
 
-EMAIL_FROM=ali@BrighterSirius.com
+EMAIL_FROM=ayman@ali.com
 
 
-SENDGRID_USERNAME=eorifj
-SENDGRID_PASSWORD=euirhfiuerh
+SENDGRID_USERNAME=Artyom23
+SENDGRID_PASSWORD=Goodluck12
