--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-brute": "^1.0.1",
+    "express-formidable": "^1.2.0",
     "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^5.0.0",
     "form-data": "^2.5.1",
