--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=3000
 DATABASE=mongodb+srv://Mawlan212:<PASSWORD>@cars-nz5sq.mongodb.net/ProjectCarsApp?retryWrites=true&w=majority
 PASSWORD=Good.luck12
